# debby

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs-and-format.yml  publish.yml  tests.yml
debby/: __init__.py  args.py  files.py
debby/meta/: meta.py  meta_loader.py  poetry_meta_loader.py  pyproject_meta_loader.py
docs/: index.html
docs/debby/: args.html  control_file.html  exceptions.html  files.html  index.html  package.html
docs/debby/meta/: index.html  meta.html  meta_loader.html  meta_loader_factory.html  poetry_meta_loader.html  pyproject_meta_loader.html
docs/debby/scripts/: index.html  script.html  script_stage.html  scripts.html
