[project]
name = "debby"
# Version is overwritten at build time by CI based on git tag
version = "0+dev"
description = "Create .deb files easily using python package metadata"
authors = [{ name = "Abraham Murciano", email = "abrahammurciano@gmail.com" }]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dependencies = ["tomli>=2.0.1", "typing-extensions>=4.11"]

[dependency-groups]
dev = ["black>=24.8.0", "mypy>=1.13.0", "pdoc3>=0.11.0"]

[project.urls]
repository = "https://github.com/abrahammurciano/debby"
documentation = "https://abrahammurciano.github.io/debby/debby"

[project.scripts]
debby = "debby.__main__:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"


[tool.mypy]
exclude = [".venv", "venv"]
